part11-ingress/04-host-based-routing/qa/01-qa-deploy.yaml
# This deployment will be deployed in the namespace qa with version v1

# within namespace qa having same ingress rules as of dev
# we will be using the host + path based rounting to diffentiate
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deploy
  # namespace: qa
spec:
  selector:
    matchLabels:
      app: my-app
  replicas: 2
  template:
    metadata:
      labels:
        app: my-app
    spec:
      terminationGracePeriodSeconds: 1
      containers:
      - name: nginx
        image: vinsdocker/k8s-app:v1 # wanted to deploy qa with version v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-app
spec:
  selector:
    app: my-app
  ports:
  - port: 80
    targetPort: 80
